--- a/src/Pages/SociatalImpact/SociatalImpact.css
+++ b/src/Pages/SociatalImpact/SociatalImpact.css
@@ -51,7 +51,15 @@ height: 100%;
   width: 100%;
   height: 100%;
 }
-
+.box-two-data-card{
+  background-color: blue;
+  height: 30vh;
+  width: fit-content;
+}
+.box-two-data-card img{
+  width: 100px;
+  height: 100px;
+}
 
 
 
