--- a/src/Pages/SociatalImpact/SociatalImpact.css
+++ b/src/Pages/SociatalImpact/SociatalImpact.css
@@ -134,11 +134,17 @@ height: 100%;
 .societal-video-1 iframe{
   width:290px;
 }
+.box-two-data-card{
+  width: 49%;
+}
 }
 @media (max-width: 480px) {
 .societal-image-1{
     width: 100%;
     height: 150px;
+}
+.box-two-data-card{
+  width: 100%;
 }
 .societal-video-1{
     height: 30vh;
