--- a/src/Pages/SociatalImpact/SociatalImpact.css
+++ b/src/Pages/SociatalImpact/SociatalImpact.css
@@ -129,6 +129,81 @@ height: 100%;
 .societal-box-two-card-div img{
   border-radius: 5px 5px 0 0;
 }
+.box-three-data-card{
+  background-color: #005bd4;
+  height: 30vh;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  color: white;
+  padding: 0 4.8%;
+}
+.box-three-data-card img{
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+}
+.societal-impact-table{
+  border: 3px solid #005bd4 !important;
+}
+.societal-impact-table td{
+  border: 3px solid #005bd4 !important;
+  width: 200px;
+  padding: 20px;
+}
+/* Scrollable area */
+.social-impact-table-scroll-container {
+  max-height: 250px; /* 👈 Fixed height */
+  overflow-y: auto;  /* 👈 Scroll when overflow */
+  border-radius: 8px;
+}
+.bg-box-four-text{
+  background-color: #005bd4;
+  color: white;
+  padding: 15px;
+}
+.box-four-data-card img{
+  height: 30vh;
+  width: 100%;
+    transition: opacity 0.4s ease;
+}
+.box-four-data-card{
+  width:33.3%;
+  position: relative;
+    overflow: hidden;
+}
+.box-four-data-card p {
+  transition: opacity 0.4s ease;
+}
+.box-four-data-card:hover img,
+.box-four-data-card:hover p {
+  opacity: 0;
+}
+
+.box-four-data-card:hover .hover-societal-text {
+  opacity: 1;
+}
+
+.box-four-data-card:hover {
+  background-color: #5ac501;
+}
+.box-four-data-card .hover-societal-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  font-size: 18px;
+  width: 80%;
+  line-height: 1.4;
+}
+
 
 @media (max-width: 768px) {
 .societal-video-1 iframe{
@@ -137,8 +212,20 @@ height: 100%;
 .box-two-data-card{
   width: 49%;
 }
+  .box-four-data-card{
+  width:50%;
+}
+
 }
 @media (max-width: 480px) {
+  .box-four-data-card{
+  width:100%;
+  position: relative;
+    overflow: hidden;
+}
+.box-three-data-card{
+  width: 100%;
+}
 .societal-image-1{
     width: 100%;
     height: 150px;
