summer program page

--- a/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
+++ b/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
@@ -83,7 +83,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background: #f6921e; /* orange */
+  background: #5ac501; /* orange */
   color: #fff;
   width: 28px;
   height: 28px;
