updated mobile nav text trabsition

--- a/src/Pages/SociatalImpact/SociatalImpact.css
+++ b/src/Pages/SociatalImpact/SociatalImpact.css
@@ -235,7 +235,7 @@ height: 100%;
 }
 .societal-video-1{
     height: 30vh;
-    width: 200px;
+    width: 99%;
 }
 .societal-video-1 iframe{
     width: 100%;
