--- a/src/Pages/SociatalImpact/SociatalImpact.css
+++ b/src/Pages/SociatalImpact/SociatalImpact.css
@@ -244,7 +244,7 @@ height: 100%;
 @media (max-width: 376px){
     .societal-video-1{
     height: 30vh;
-    width: 200px;
+    width: 99%;
 }
 .societal-video-1 iframe{
     width: 100% !important;
@@ -253,7 +253,7 @@ height: 100%;
 @media (max-width: 320px){
     .societal-video-1{
     height: 30vh;
-    width: 200px;
+    width: 99%;
 }
 .societal-video-1 iframe{
     width: 100% !important;
