--- a/src/Pages/SociatalImpact/SociatalImpact.css
+++ b/src/Pages/SociatalImpact/SociatalImpact.css
@@ -35,7 +35,7 @@ height: 100%;
 }
 
 .societal-impactimage-btn button {
-  background-color: rgb(90, 197, 1);
+  background-color: #005bd4;
   color: white;
   border: none;
   padding: 6px 10px;
