--- a/src/Pages/SociatalImpact/SociatalImpact.css
+++ b/src/Pages/SociatalImpact/SociatalImpact.css
@@ -235,6 +235,9 @@ height: 100%;
 }
 .box-three-data-card{
   width: 100%;
+  height: 20vh;
+  flex-direction: row;
+  gap: 10px;
 }
 .societal-image-1{
     width: 100%;
@@ -242,7 +245,9 @@ height: 100%;
 }
 .box-two-data-card{
   width: 100%;
-  height: 30vh;
+  height: 20vh;
+  padding: 20px 0;
+  justify-content: center;
 }
 .box-two-data-card img{
   height: 80px;
