--- a/src/Pages/SummerProgram/SummerProgram.css
+++ b/src/Pages/SummerProgram/SummerProgram.css
@@ -43,10 +43,18 @@
         width: 100%;
         height: 50vh;
     }
+        .summer-pillar-content-head{
+        height: 7vh;
+        font-size: 1rem;
+    }
 }
 @media (max-width:480px) {
     .summer-program-about-image{
         width: 100%;
         height: 40vh;
+    }
+    .summer-pillar-content-head{
+        height: 7vh;
+        font-size: 1rem;
     }
 }
