--- a/src/Pages/AdmissionPage/AdmissionPage.css
+++ b/src/Pages/AdmissionPage/AdmissionPage.css
@@ -28,3 +28,20 @@
 .brand-card{
     border: 1px solid rgb(207, 206, 206);
 }
+
+.apd-custom-table{
+    border: transparent;
+}
+/* in your CSS file */
+.apd-custom-table tbody tr.alternatives-row {
+  background-color: #d9f2d9 !important; /* use !important to override bootstrap */
+}
+
+.apd-custom-table tbody tr:nth-child(even):not(.alternatives-row) {
+  background-color: #f2f2f2; /* even rows except alternatives row */
+}
+
+.apd-custom-table tbody tr:nth-child(odd):not(.alternatives-row) {
+  background-color: white; /* odd rows except alternatives row */
+}
+
