--- a/src/Pages/CareersPage/CareersPage.css
+++ b/src/Pages/CareersPage/CareersPage.css
@@ -97,7 +97,16 @@
     position: relative;
     overflow: visible;
 }
-
+.cw-right-image{
+    width: 50%;
+    height: 50vh;
+    object-fit: cover;
+}
+.cw-action-btn-div{
+    border-bottom: 1px solid gainsboro;
+    padding-bottom: 5%;
+    padding-top: 5%;
+}
 @media (max-width:768px) {
     .cpo-data-para{
         bottom: -5%;
@@ -118,5 +127,9 @@
     }
     .connect-section{
         padding: 30px 20px;
+    }
+    .cw-right-image{
+        width: 100%;
+        height: 30vh;
     }
 }
