--- a/src/Pages/AdmissionPage/AdmissionPage.css
+++ b/src/Pages/AdmissionPage/AdmissionPage.css
@@ -47,6 +47,14 @@
 .adp-right-container{
   position: relative;
 }
+.chtp-btn{
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 10px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+}
 @media (max-width:768px) {
   .adp-fee-payment-box{
     width: 100%;
